# sim-plugin-autodeskfusion

./: .gitignore  CHANGELOG.md  LICENSE-NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cookbook/: README.md  starship_stack.py
src/sim_plugin_autodeskfusion/: __init__.py  driver.py
src/sim_plugin_autodeskfusion/_skills/autodeskfusion/: SKILL.md
src/sim_plugin_fusion360/: __init__.py  driver.py
src/sim_plugin_fusion360/_skills/fusion360/: SKILL.md
src/sim_plugin_fusion360/bridge/: SimFusionBridge.manifest  SimFusionBridge.py  __init__.py
tests/: test_autodeskfusion_driver.py  test_fusion360_driver.py
tests/fixtures/: bad_syntax.py  good_fusion_script.py
